src/test/ui/asm/inline-syntax.arm.stderr
error: att syntax is the default syntax on this target, and trying to use this directive may cause issues
  --> $DIR/inline-syntax.rs:23:15
   |
LL |         asm!(".att_syntax noprefix", "nop");
   |               ^^^^^^^^^^^^^^^^^^^^ help: remove this assembler directive

error: att syntax is the default syntax on this target, and trying to use this directive may cause issues
  --> $DIR/inline-syntax.rs:26:15
   |
LL |         asm!(".att_syntax bbb noprefix", "nop");
   |               ^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this assembler directive

error: aborting due to 2 previous errors

